@@ -10,29 +10,31 @@ Rhino is licensed under the [MPL 2.0](./LICENSE.txt).
 
 ## Releases
 
-<table>
-<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7R5_RELEASE">Rhino 1.7R5</a></td><td>January 29, 2015</td></tr>
-<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_6_RELEASE">Rhino 1.7.6</a></td><td>April 15, 2015</td></tr>
-<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_7_RELEASE">Rhino 1.7.7</a></td><td>June 17, 2015</td></tr>
-<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_7_1_RELEASE">Rhino 1.7.7.1</a></td><td>February 2, 2016</td></tr>
-<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_7_2_Release">Rhino 1.7.7.2</a></td><td>August 24, 2017</td></tr>
-<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_8_Release">Rhino 1.7.8</a></td><td>January 22, 2018</td></tr>
-<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_9_Release">Rhino 1.7.9</a></td><td>March 15, 2018</td></tr>
-<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_10_Release">Rhino 1.7.10</a></td><td>April 9, 2018</td></tr>
-<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_11_Release">Rhino 1.7.11</a></td><td>May 30, 2019</td></tr>
-<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_12_Release">Rhino 1.7.12</a></td><td>January 13, 2020</td></tr>
-<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_13_Release">Rhino 1.7.13</a></td><td>September 2, 2020</td></tr>
-<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_14_Release">Rhino 1.7.14</a></td><td>January 6, 2022</td></tr>
-</table>
+The current release is <a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_15_Release">Rhino 1.7.15</a>. Please see the [Release Notes](./RELEASE-NOTES.md).
 
-[Release Notes](./RELEASE-NOTES.md) for recent releases.
+<details><summary>Releases</summary>
+<table>
+<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_15_Release">Rhino 1.7.15</a></td><td>May 3, 2024</td></tr>
+<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_14_Release">Rhino 1.7.14</a></td><td>January 6, 2022</td></tr>
+<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_13_Release">Rhino 1.7.13</a></td><td>September 2, 2020</td></tr>
+<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_12_Release">Rhino 1.7.12</a></td><td>January 13, 2020</td></tr>
+<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_11_Release">Rhino 1.7.11</a></td><td>May 30, 2019</td></tr>
+<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_10_Release">Rhino 1.7.10</a></td><td>April 9, 2018</td></tr>
+<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_9_Release">Rhino 1.7.9</a></td><td>March 15, 2018</td></tr>
+<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_8_Release">Rhino 1.7.8</a></td><td>January 22, 2018</td></tr>
+<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_7_2_Release">Rhino 1.7.7.2</a></td><td>August 24, 2017</td></tr>
+<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_7_1_RELEASE">Rhino 1.7.7.1</a></td><td>February 2, 2016</td></tr>
+<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_7_RELEASE">Rhino 1.7.7</a></td><td>June 17, 2015</td></tr>
+<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7_6_RELEASE">Rhino 1.7.6</a></td><td>April 15, 2015</td></tr>
+<tr><td><a href="https://github.com/mozilla/rhino/releases/tag/Rhino1_7R5_RELEASE">Rhino 1.7R5</a></td><td>January 29, 2015</td></tr>
+</table>
+</details>
+
 
 [Compatibility table](https://mozilla.github.io/rhino/compat/engines.html) which shows which advanced JavaScript
 features from ES6, and ES2016+ are implemented in Rhino.
 
 [![GitHub Action Status](https://github.com/mozilla/rhino/actions/workflows/gradle.yml/badge.svg)](https://github.com/mozilla/rhino/actions/workflows/gradle.yml)
-
-[![Mozilla](https://circleci.com/gh/mozilla/rhino.svg?style=shield)](https://app.circleci.com/pipelines/github/mozilla/rhino)
 
 ## Documentation
 
@@ -44,30 +46,68 @@ JavaDoc for all the APIs:
 
 [https://javadoc.io/doc/org.mozilla/rhino](https://javadoc.io/doc/org.mozilla/rhino)
 
-More resources if you get stuck:
+## Code Structure
 
-[https://developer.mozilla.org/en-US/docs/Mozilla/Projects/Rhino/Community](https://developer.mozilla.org/en-US/docs/Mozilla/Projects/Rhino/Community)
+Rhino 1.7.15 and before were primarily used in a single JAR called "rhino.jar".
+
+Newer releases now organize the code using Java modules. There are four primary modules:
+
+* **rhino**: The primary codebase necessary and sufficient to run JavaScript code. Required by everything that uses Rhino. In releases *after* 1.7.15, this module does not contain the "tools" or the XML implementation.
+* **rhino-tools**: Contains the shell, debugger, and the "Global" object, which many tests and other Rhino-based tools use. Note that adding Global gives Rhino the ability to print to stdout, open files, and do other things that may be considered dangerous in a sensitive environment, so it only makes sense to include if you will use it.
+* **rhino-xml**: Adds the implementation of the E4X XML standard. Only required if you are using that.
+* **rhino-engine**: Adds the Rhino implementation of the standard Java *ScriptEngine* interface. Some projects use this to be able to switch between script execution engines, but for anything even moderately complex it is almost always easier and always more flexible to use Rhino's API directly.
+
+The release contains the following other modules, which are used while building and 
+testing but which are not published to Maven Central:
+
+* **rhino-all**: This creates an "all-in-one" JAR that includes *rhino-runtime*, *rhino-tools*, and *rhino-xml*. This is what's used if you want to run Rhino using "java jar".
+* **tests**: The tests that depend on all of Rhino and also the external tests, including the Mozilla legacy test scripts and the test262 tests.
+* **benchmarks**: Runs benchmarks using JMH.
+* **examples**: Surprisingly, this contains example code.
 
 ## Building
 
+### Requirements
+
+Rhino requires Java 11 to build. It will (currently) build with Java versions up to at least 
+Java 21. However, not all tools work with Java 21, such as "spotless", so Java 11 is required for
+regular developers.
+
 ### How to Build
 
-Rhino builds with `Gradle`. Here are some useful tasks:
-```
-./gradlew jar
-```
-Build and create `Rhino` jar in the `buildGradle/libs` directory.
-```
-git submodule init
-git submodule update
-./gradlew test
-```
-Build and run all the tests, including the official [ECMAScript Test Suite](https://github.com/tc39/test262).
-See [Running tests](testsrc/README.md) for more detailed info about running tests.
-```
-./gradlew testBenchmark
-```
-Build and run benchmark tests.
+For normal development, you can build the code, run the static checks, and run all the tests like this:
+
+    git submodule init
+    git submodule update
+    ./gradlew check
+
+To just run the Rhino shell, you can do this from the top-level directory:
+
+    ./gradlew run -q --console=plain
+
+Alternately, you can build an all-in-one JAR and run that:
+
+    ./gradlew :rhino-all:build
+    java -jar rhino-all/build/libs/rhino-all-1.7.16-SNAPSHOT.jar
+
+You can also run the benchmarks:
+
+    ./gradlew jmh
+
+### Code Coverage
+
+The "Jacoco" coverage is enabled by default for the main published modules as well as the special 
+"tests" module. Coverage is generated for each of the main projects separately and available by
+running
+
+    ./gradlew jacocoTestReport
+
+To see an aggregated coverage report for everything, which is probably what you want, run
+
+    ./gradlew testCodeCoverageReport
+
+The result is in:
+    ./tests/build/reports/jacoco/testCodeCoverageReport/html
 
 ## Releasing and publishing new version
 
@@ -88,29 +128,18 @@ mavenReleaseRepo=
 5. Increase version and add `-SNAPSHOT` to it in `gradle.properties` in project root folder.
 6. Push `gradle.properties` to `GitHub`
 
-## Running
-
-Rhino can run as a stand-alone interpreter from the command line:
-```
-java -jar buildGradle/libs/rhino-1.7.12.jar -debug -version 200
-Rhino 1.7.9 2018 03 15
-js> print('Hello, World!');
-Hello, World!
-js>
-```
-There is also a "rhino" package for many Linux distributions as well as Homebrew for the Mac.
-
-You can also embed it, as most people do. See below for more docs.
-
 ### Java 16 and later
 
 If you are using a modular JDK that disallows the reflective access to
-non-public fields (16 and later), you may need to configure the JVM with the
+non-public fields (16 and later), you *may* need to configure the JVM with the
 [`--add-opens`](https://docs.oracle.com/en/java/javase/17/migrate/migrating-jdk-8-later-jdk-releases.html#GUID-12F945EB-71D6-46AF-8C3D-D354FD0B1781)
 option to authorize the packages that your scripts shall use, for example:
 ```
 --add-opens java.desktop/javax.swing.table=ALL-UNNAMED
 ```
+
+This is not necessary just to build Rhino -- it may be necessary when embedding it
+depending on what your project does.
 
 ## Issues
 
@@ -145,22 +174,12 @@ hundreds of lines of changes to, please try to put the reformatting changes
 alone into a single Git commit so that we can separate reformatting changes
 from more substantive changes.
 
-> **Warning:** If you build with Java 16 or later, you need to apply a
-> workaround for a "spotless" issue. Otherwise, the task will be disabled
-> and your PR may fail.
-> 
-> The following must be added to your `gradle.properties`.
-> ```
-> org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
->  --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
->  --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
->  --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
->  --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-> ```
-> For more details, see https://github.com/diffplug/spotless/issues/834#issuecomment-819118761
+Currently, you must be building on Java 11 for Spotless to run. We recommend that you
+have that ready. (We have not been able to figure out a version of Spotless and the 
+Google formatting plugin that it uses that works on many Java versions.)
 
 ## More Help
 
-The Google group is the best place to go with questions:
+GitHub is the best place to go with questions. For example, we use "GitHub discussions":
 
-[https://groups.google.com/forum/#!forum/mozilla-rhino](https://groups.google.com/forum/#!forum/mozilla-rhino)
+[https://github.com/mozilla/rhino/discussions](https://github.com/mozilla/rhino/discussions)
